fix(react-video-demo): fix reaction content & date separator alignment

--- a/sample-apps/react/react-video-demo/src/styles/chat.css
+++ b/sample-apps/react/react-video-demo/src/styles/chat.css
@@ -64,6 +64,14 @@
   margin-left: 5px;
 }
 
+.str-chat__message-reaction button {
+  line-height: initial;
+}
+
+.str-chat__date-separator {
+  padding-inline: 0;
+}
+
 .str-chat__modal--open .str-chat__modal__inner {
   width: 90%;
 }
